
FILE(GLOB KOTI_APPLICATION_SRC "*.cpp")
FILE(GLOB KOTI_APPLICATION_HDR "*.hpp")

SET(KOTI_APPLICATION_LIB_DEPENDENCIES
	spdlog
	koti_exceptions_lib
	koti_options_lib
	${Boost_LIBRARIES}
)

IF(KOTI_APPLICATION_SRC)
	SET(KOTI_APPLICATION_LIB_TYPE "STATIC")

	ADD_LIBRARY(koti_application_lib STATIC
		${KOTI_APPLICATION_HDR}
		${KOTI_APPLICATION_SRC}
	)
	TARGET_LINK_LIBRARIES(koti_application_lib
		${KOTI_APPLICATION_LIB_DEPENDENCIES}
	)
ELSE()
	SET(KOTI_APPLICATION_LIB_TYPE "INTERFACE")

	ADD_LIBRARY(koti_application_lib INTERFACE)
	TARGET_LINK_LIBRARIES(koti_application_lib
		INTERFACE
		${KOTI_APPLICATION_LIB_DEPENDENCIES}
	)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(koti_application_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_application_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

