
FILE(GLOB KOTI_NET_SRC "*.cpp")
FILE(GLOB KOTI_NET_HDR "*.hpp")

SET(KOTI_NET_LIB_DEPENDENCIES
	koti_options_lib
	kotipp_lib
	${Boost_LIBRARIES}
	spdlog
)

IF(KOTI_NET_SRC)
	SET(KOTI_NET_LIB_TYPE "STATIC")

	ADD_LIBRARY(koti_net_lib STATIC ${KOTI_NET_HDR} ${KOTI_NET_SRC})
	TARGET_LINK_LIBRARIES(koti_net_lib
		${KOTI_NET_LIB_DEPENDENCIES}
	)
ELSE()
	SET(KOTI_NET_LIB_TYPE "INTERFACE")

	ADD_LIBRARY(koti_net_lib INTERFACE)
	TARGET_LINK_LIBRARIES(koti_net_lib
		INTERFACE
		${KOTI_NET_LIB_DEPENDENCIES}
	)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(koti_net_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_net_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

