
FILE(GLOB KOTI_TEST_SUPPORT_SRC "*.cpp" "test-support/*.cpp")
FILE(GLOB KOTI_TEST_SUPPORT_HDR "*.hpp" "test-support/*.hpp")

SET(KOTI_TEST_SUPPORT_LIB_DEPENDENCIES
	spdlog
	${Boost_LIBRARIES}
)

IF(KOTI_TEST_SUPPORT_SRC)
	SET(KOTI_TEST_SUPPORT_LIB_TYPE "STATIC")

	ADD_LIBRARY(koti_test_support_lib STATIC
		${KOTI_TEST_SUPPORT_HDR}
		${KOTI_TEST_SUPPORT_SRC}
	)
	TARGET_LINK_LIBRARIES(koti_test_support_lib
		spdlog
		${KOTI_TEST_SUPPORT_LIB_DEPENDENCIES}
	)
ELSE()
	SET(KOTI_TEST_SUPPORT_LIB_TYPE "INTERFACE")

	ADD_LIBRARY(koti_test_support_lib INTERFACE)
	TARGET_LINK_LIBRARIES(koti_test_support_lib
		INTERFACE
		spdlog
		${KOTI_TEST_SUPPORT_LIB_DEPENDENCIES}
	)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(koti_test_support_lib
	INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}
)

INSTALL(TARGETS koti_test_support_lib DESTINATION lib)

ADD_SUBDIRECTORY(test)

