
FILE(GLOB KOTIPP_SRC "*.c" "*.cpp")
FILE(GLOB KOTIPP_HDR "*.h" "*.hpp")

LIST(REMOVE_ITEM KOTIPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")

ADD_LIBRARY(kotipp_lib STATIC ${KOTIPP_HDR} ${KOTIPP_SRC} )

TARGET_LINK_LIBRARIES(kotipp_lib
	${Boost_LIBRARIES}
	${ZLIB_LIBRARIES}
	${BZIP2_LIBRARIES}
)

TARGET_INCLUDE_DIRECTORIES(kotipp_lib
	INTERFACE
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
	$<INSTALL_INTERFACE:include/kotipp>
)

INSTALL(TARGETS
	kotipp_lib
	DESTINATION
	lib
	EXPORT
	kotipp
)

INSTALL(FILES
	${KOTIPP_HDR}
	DESTINATION
	include/kotipp
)

ADD_SUBDIRECTORY(test)

